--- a/src/Components/Outline/Outline.module.css
+++ b/src/Components/Outline/Outline.module.css
@@ -2,4 +2,8 @@
     margin: auto;
     width: 80%;
     height: 100%;
+    background-image: url(../../Assets/Images/WoodTheme.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
