--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 100%;
   text-align: center;
-  /* background: radial-gradient(circle, rgba(0,0,0,1) 12%, rgba(51,16,10,1) 100%); */
-  /* background-image: linear-gradient(to bottom, #1F0A06 0%, #000000 50%, #33100A 100%); */
-  background-image: linear-gradient(to bottom, #1F0A06 0%, #000000 50%, #1F0A06 100%);
+  background: url(./Assets/Images/grant-ritchie-x1w_Q78xNEY-unsplash.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
